# csviewer-tui

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
src/csviewer_tui/: __init__.py  __main__.py  app.py  app.tcss  version.py
